--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -7,11 +7,11 @@
         </header>
       </div>
     {{ end }}
-    <div class="row">
+    <div class="row"> 
       <div class="col-sm-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
-        {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+        {{ $paginator := .Paginate (where site.RegularPages "Type" "post") }}
         {{ range $paginator.Pages }}
-          {{ .Render "summary" }}
+          {{.Render "summary" }}
         {{ end }}
         {{ partial "bloc/content/pagination.html" . }}
       </div>
