--- a/layouts/_default/single.hat.html
+++ b/layouts/_default/single.hat.html
@@ -1,5 +1,6 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-<header class="container hat">
-  {{ partial "bloc/content/h1-title.html" . }}
-</header>
+    <header class="container hat">
+        {{ partial "bloc/content/h1-title.html" . }}
+        {{ partial "bloc/content/authors.html" . }}
+    </header>
 </div>
