--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    {{ .Render "summary.hat" }}
-    {{ .Render "summary.content" }}
-    {{ .Render "summary.boot" }}
-  </div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        {{ .Render "summary.hat" }}
+        {{ partial "bloc/content/summary_minus_toc" . }}
+        {{ .Render "summary.boot" }}
+    </div>
 </div>
