--- a/layouts/partials/base/metas.html
+++ b/layouts/partials/base/metas.html
@@ -22,51 +22,51 @@
 {{ else }}
 <meta property="content-source" content="{{ .File.Path}}">
 <meta property="og:type" content="article" />
-<meta property="og:description" content="{{ .Description }}"/>
+<meta property="og:description" content="{{ with .Description }}{{ . | markdownify | plainify }}{{ else }}{{ if .IsPage }}{{ partial "bloc/content/summary_minus_toc.html" . | markdownify | plainify }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify | plainify }}{{ end }}{{ end }}{{ end -}}"/>
 <meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
 <meta property="og:article:modified_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
 
-  {{ if .Keywords }}
-    {{ range .Keywords }}
+{{ if .Keywords }}
+{{ range .Keywords }}
 <meta property="og:article:tag" content="{{ . }}">
-    {{ end }}
-  {{ else if isset .Params "tags" }}
-    {{ range .Params.tags }}
+{{ end }}
+{{ else if isset .Params "tags" }}
+{{ range .Params.tags }}
 <meta property="og:article:tag" content="{{ . }}">
-    {{ end }}
-  {{ end }}
+{{ end }}
+{{ end }}
 
-  {{ if ne .Site.Params.twitter "" }}
+{{ if ne .Site.Params.twitter "" }}
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
 <meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
 <meta name="twitter:title" content="{{ .Title }}" />
-<meta name="twitter:description" content="{{ .Description }}" />
+<meta name="twitter:description" content="{{ with .Description }}{{ . | markdownify | plainify }}{{ else }}{{ if .IsPage }}{{ partial "bloc/content/summary_minus_toc.html" . | markdownify | plainify }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify | plainify }}{{ end }}{{ end }}{{ end -}}"/>
 <meta name="twitter:url" content="{{ .Permalink }}" />
 <meta name="twitter:domain" content="{{ .Site.BaseURL }}">
-  {{ end }}
+{{ end }}
 
-  {{ if ne .Site.Params.googleplus "" }}
+{{ if ne .Site.Params.googleplus "" }}
 <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "Article",
-    "headline": "{{ .Title }}",
-    "author": {
-      "@type": "Person",
-      "name": "http://profiles.google.com/+{{ .Site.Params.googleplus }}?rel=author"
-    },
-    "datePublished": "{{ .Date.Format "2006-01-02" }}",
-    "description": "{{ .Description }}",
-    "wordCount": {{ .WordCount }}
-  }
+ {
+     "@context": "http://schema.org",
+     "@type": "Article",
+     "headline": "{{ .Title }}",
+     "author": {
+         "@type": "Person",
+         "name": "http://profiles.google.com/+{{ .Site.Params.googleplus }}?rel=author"
+     },
+     "datePublished": "{{ .Date.Format "2006-01-02" }}",
+     "description": "{{ .Description }}",
+     "wordCount": {{ .WordCount }}
+ }
 </script>
-  {{ end }}
+{{ end }}
 {{ end }}
 
-{{ if .RSSLink }}
-<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />
-{{ end }}
+{{ range .AlternativeOutputFormats -}}
+{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+{{ end -}}
 <link rel="canonical" href="{{ .Permalink }}" />
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/touch-icon-144-precomposed.png">
 <link rel="icon" href="/favicon.png">
