--- a/layouts/partials/modules/site/link/social.html
+++ b/layouts/partials/modules/site/link/social.html
@@ -5,5 +5,7 @@
 {{ partial "modules/site/link/social/googleplus.html" . }}
 {{ partial "modules/site/link/social/facebook.html" . }}
 {{ partial "modules/site/link/social/twitter.html" . }}
+{{ partial "modules/site/link/social/reddit.html" . }}
+{{ partial "modules/site/link/social/stackoverflow.html" . }}
 {{ partial "modules/site/link/social/youtube.html" . }}
 {{ partial "modules/site/link/social/rss.html" . }}
