--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -26,13 +26,13 @@
     <div class="container">
         <div class="row">
             {{ .Render "single.hat" }}
-        </div>m
+        </div>
     </div>
 </div>
 {{ end }}
 <div class="container">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
 
             {{ if (eq (.Scratch.Get "url") "") }}
             {{ .Render "single.hat" }}
@@ -40,12 +40,11 @@
             {{ .Render "single.content" }}
             {{ .Render "single.boot" }}
         </div>
-    </div>
-    <div class="row">
-        {{ range .Site.Sections }}
-        {{ partial "bloc/section/list.html" . }}
+        {{ if .Site.Params.showRightSidebar }}
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+            {{ partial "bloc/content/sidebar.html" .}}
+        </div>
         {{ end }}
     </div>
 </div>
-
 {{ partial "foot.html" . }}
