--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,13 +8,13 @@
      background-position: center;
      background-repeat: no-repeat;
      background-size:  cover;
-     height: 400px;
+     height: 35vh;
  }
  .title-metas, .hat {
      position: absolute;
      right: 0px;
      left:0px;
-     bottom: -400px;
+     bottom: -35vh;
      background:linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgb(255, 255, 255));
  }
  body > .container {
