--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -1,25 +1,7 @@
-  <div class="container">
-    {{ if .Site.Params.showBlogHeader }}
-      <div class="row">
-        <header>
-          {{ partial "bloc/content/h1-title.html" . }}
-          {{ partial "bloc/content/lastupdate.html" . }}
-        </header>
-      </div>
-    {{ end }}
+<div class="container">
     <div class="row">
-      <div class="col-sm-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
-        {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
-        {{ range $paginator.Pages }}
-          {{ .Render "summary" }}
+        {{ range .Site.Sections }}
+        {{ partial "bloc/section/list.html" . }}
         {{ end }}
-        {{ partial "bloc/content/pagination.html" . }}
-      </div>
-      {{ if .Site.Params.showRightSidebar }}
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-          {{ partial "bloc/content/sidebar.html" . }}
-        </div>
-      {{ end }}
     </div>
-
-  </div>
+</div>
