Solving problems without heroimage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,10 @@ code.has-jax {
   padding: 0 0 0 5px;
 }
 
+dd {
+  margin-left: 10px;
+}
+
 .fa-facebook-official { color: #3b5998; }
 
 .fa-google-plus { color: #d34836; }
@@ -224,18 +228,4 @@ body > .homepage-container {
 }
 .homepage-content {
   padding: 4vh 0px;
-}
-
-.hero {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size:  cover;
-  height: calc(200px + (450 - 200) * ((100vw - 300px) / (1600 - 300)));
-}
-.title-metas, .hat {
-  position: absolute;
-  right: 0px;
-  left:0px;
-  bottom: calc(-1 * (200px + (450 - 200) * ((100vw - 300px) / (1600 - 300))));
-  background:linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgb(255, 255, 255));
 }
