--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
             <header class="homepage-container homepage-hat">
                 <div class="homepage-title">{{ partial "modules/page/title.html" . }}</div>
                 <div class="homepage-content">
-                    {{ .Content }}
+                    {{ .Description }}
                 </div>
             </header>
         </div>
