--- a/layouts/partials/bloc/content/sidebar.html
+++ b/layouts/partials/bloc/content/sidebar.html
@@ -6,32 +6,31 @@
     </div>
     {{ end }}
 
-    <div class="section">
-        <header><div class="title"><b>{{ i18n "latestposts" }}</b></div></header>
-        <div class="content">
+    <section class="panel panel-default">
+        <div class="panel-heading">
+            <b>Latest post</b>
+            <div style="float: right"><a href="{{ "/post/" | relLangURL }}">- full list -</a></div>
+        </div>
+
+        <div class="panel-body">
             <ul>
                 {{ range first 10 (where (where .Site.Pages "Type" "post") "IsPage" true) }}
                 <li>
-                    <a href="{{ .Permalink }}">{{ .Title }}</a>
+                    <a href="{{ .Permalink }}">{{ partial "modules/page/title.html" . }}</a>
                 </li>
                 {{ end }}
             </ul>
         </div>
-    </div>
 
-    {{ range $key, $value := .Site.Taxonomies }}
-    {{ $len := len $value }}
-    {{ if (not ( eq $len 0 ) ) }}
-    <div class="section taxonomies">
-        <header><div class="title"><b>{{ $key | singularize }}</b></div></header>
+    </section>
 
-        <div class="content">
-            <ul>
-                {{ range first 10 $value.ByCount }}<li><a href="{{$.Site.LanguagePrefix }}/{{ $key }}/{{ .Name | urlize }}">{{ .Name }}</a></li>{{ end }}
-            </ul>
+    <section class="panel panel-default">
+        <div class="panel-heading">
+            <b>Tags</b>
+            <div style="float: right"><a href="{{ "/tags/" | relLangURL }}">- full list -</a></div>
         </div>
-    </div>
-    {{ end }}
-    {{ end }}
+
+        {{ partial "modules/site/tag-cloud.html" . }}
+    </section>
 
 </div>
