Improve section single and navigation on articles

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -4,9 +4,15 @@
         {{ partial "bloc/content/h1-title.html" . }}
     </header>
     {{ .Content }}
+
+    {{ range .Sections }}
+    {{ .Render "summary" }}
+    {{ end }}
+
     {{ range .Paginator.Pages }}
     {{ .Render "summary" }}
     {{ end }}
     {{ partial "bloc/content/pagination.html" . }}
+
 </div>
 {{ partial "foot.html" . }}
