--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,6 +1,6 @@
     {{ partial "base/footer.html" . }}
     {{ partial "base/scripts.html" . }}
-
+    {{ partial "base/goatcounter.html" . }}
 
 
   </body>
