Improve logo setting at the middle

--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -97,19 +97,17 @@
 
 <script>
  window.MathJax = {
-     tex: {
-         inlineMath: [['$','$'], ['\\(','\\)']],
-         displayMath: [['$$','$$'], ['\[','\]']],
-         processEscapes: true,
-         processEnvironments: true
-     },
      options: {
          skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
      },
-     loader: {load: ['[tex]/physics']},
-     tex: {packages: {'[+]': ['physics']}}
+     svg: {
+         fontCache: 'global'
+     },
+     loader: {load: ['[tex]/physics', '[tex]/colorV2', '[tex]/ams']},
+     tex: {packages: {'[+]': ['physics', 'color', 'ams']}}
  };
 </script>
-<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+<script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js">
 </script>
 {{ end }}
