--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ body > .container {
 
 .navbar-brand {
   padding: 20px;
-  vertical-align: baseline;;
+  vertical-align: baseline;
 }
 
 .navbar-brand-img {
@@ -65,6 +65,7 @@ body > .container {
 
 a.navbar-brand-img>img {
   vertical-align: bottom;
+  padding: 1em 0 0 15px;
 }
 
 img {
