--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -9,7 +9,7 @@
     {{ .Render "summary" }}
     {{ end }}
 
-    {{ range .Paginator.Pages }}
+    {{ range sort .Paginator.Pages }}
     {{ .Render "summary" }}
     {{ end }}
     {{ partial "bloc/content/pagination.html" . }}
