--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
                     {{ partial "modules/page/title.html" . }}
                 </div>
                 <div class="homepage-content">
-                    {{ .Render "single.content" }}
+                    {{ .Description }}
                 </div>
             </header>
         </div>
