Improve blog post space

--- a/layouts/partials/bloc/content/sidebar.html
+++ b/layouts/partials/bloc/content/sidebar.html
@@ -1,9 +1,19 @@
 <div>
     {{ if and .IsPage (eq .Params.toc true) }}
     <div class="section">
-        <header><div class="title">Table Of Contents</div></header>
-        <div class="list-default">{{ .TableOfContents }}</div>
+        <header><div class="title"></div></header>
+
     </div>
+    <section class="panel panel-default">
+        <div class="panel-heading">
+            <b>Table Of Contents</b>
+        </div>
+
+        <div class="panel-body">
+            <div class="list-default">{{ .TableOfContents }}</div>
+        </div>
+
+    </section>
     {{ end }}
 
     <section class="panel panel-default">
