--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -32,19 +32,16 @@
 {{ end }}
 <div class="container">
     <div class="row">
-        <div class="col-sm-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
-
+        <div class="col-xs-12 col-sm-12 col-md-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }} col-lg-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
             {{ if (eq (.Scratch.Get "url") "") }}
             {{ .Render "single.hat" }}
             {{ end }}
             {{ .Render "single.content" }}
             {{ .Render "single.boot" }}
         </div>
-        {{ if .Site.Params.showRightSidebar }}
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+        <div class="col-xs-12 col-sm-12 col-md-{{ if .Site.Params.showRightSidebar }}3{{ else }}12{{ end }} col-lg-{{ if .Site.Params.showRightSidebar }}3{{ else }}12{{ end }}">
             {{ partial "bloc/content/sidebar.html" .}}
         </div>
-        {{ end }}
     </div>
 </div>
 {{ partial "foot.html" . }}
