--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,18 @@ h5 {
   margin-left: 2vw;
 }
 
+ul {
+    padding: 0 0 0 1.25em;
+}
+
+#TableOfContents ul {
+    list-style-type: none;
+}
+
+#TableOfContents ul ul {
+    list-style-type: disc;
+}
+
 .footer {
   position: absolute;
   bottom: -5%;
@@ -155,6 +167,15 @@ dd {
   margin-left: 10px;
 }
 
+pre {
+    padding: 0px;
+}
+
+pre code {
+    font-size: calc(8px + (12 - 8) * ((100vw - 300px) / (1600 - 300)));
+    line-height: calc(1.2em + (1.3 - 1.1) * ((100vw - 300px)/(1600 - 300)));
+}
+
 .fa-facebook-official { color: #3b5998; }
 
 .fa-google-plus { color: #d34836; }
@@ -263,9 +284,29 @@ body > .homepage-container {
 }
 
 .navbar-nav-dark > li > a {
-  color: #b38f33;
   padding-bottom: 10px;
   padding-top: 10px;
   font-style: italic;
   font-size: small;
+}
+
+dl {
+    display: flex;
+    flex-flow: row wrap;
+    border: solid #504f51;
+    border-width: 1px 1px 0 0;
+}
+dt {
+    flex-basis: 20%;
+    padding: 2px 4px;
+    background: #504f51;
+    text-align: right;
+    color: #fff;
+}
+dd {
+    flex-basis: 70%;
+    flex-grow: 1;
+    margin: 0;
+    padding: 2px 4px;
+    border-bottom: 1px solid #504f51;
 }
