--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,13 @@ ul {
   padding-bottom: 1rem;
 }
 
+.footer .navbar-nav li a {
+  width: 12em; /* the element needs a fixed width (in px, em, %, etc) */
+  overflow: hidden; /* make sure it hides the content that overflows */
+  white-space: nowrap; /* don't break the line */
+  text-overflow: ellipsis; /* give the beautiful '...' effect */
+}
+
 body > .container {
   padding: 75px 15px 0;
 }
@@ -80,10 +87,11 @@ a.navbar-brand-img>img {
 }
 
 img {
-  display: block;
-  max-width: 90%;
-  height: auto;
-  margin: auto;
+    display: block;
+    width:90%;
+    max-width:640px;
+    height: auto;
+    margin: auto;
 }
 
 figcaption {
@@ -125,8 +133,23 @@ p {
 }
 
 /* Responsive video? */
-iframe {
-  max-width: 100%;
+.video {
+    width: 80%;
+    max-width: 640px;
+    margin: 0 auto 21px auto;
+    position: relative;
+    padding-bottom: 35.25%;
+    height: 0;
+    overflow: hidden;
+}
+
+.video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border:0;
 }
 
 /* Popover */
@@ -168,12 +191,17 @@ dd {
 }
 
 pre {
-    padding: 0px;
+    padding: 2px;
 }
 
 pre code {
     font-size: calc(8px + (12 - 8) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.2em + (1.3 - 1.1) * ((100vw - 300px)/(1600 - 300)));
+}
+
+.highlight {
+    width: 91%;
+    margin: auto;
 }
 
 .fa-facebook-official { color: #3b5998; }
@@ -290,23 +318,35 @@ body > .homepage-container {
   font-size: small;
 }
 
+.nav > li > a:hover, .nav > li > a:focus {
+    text-decoration: none;
+    background-color: #333;
+}
+
 dl {
     display: flex;
     flex-flow: row wrap;
     border: solid #504f51;
     border-width: 1px 1px 0 0;
+    width: 90%;
+    margin: auto;
 }
 dt {
-    flex-basis: 20%;
+    flex-basis: 22%;
     padding: 2px 4px;
     background: #504f51;
     text-align: right;
     color: #fff;
 }
 dd {
-    flex-basis: 70%;
+    flex-basis: 78%;
     flex-grow: 1;
     margin: 0;
     padding: 2px 4px;
     border-bottom: 1px solid #504f51;
+}
+
+blockquote {
+    margin: 0 auto 21px auto;
+    width: 90%;
 }
