Improve css and add table of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,19 @@ img {
     margin: auto;
 }
 
+img:hover{
+  color: #424242;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -ms-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+  opacity: 1;
+  transform: scale(1.15);
+  -ms-transform: scale(1.15); /* IE 9 */
+  -webkit-transform: scale(1.15); /* Safari and Chrome */
+}
+
 figcaption {
   display: block;
 }
@@ -350,4 +363,9 @@ dd {
 blockquote {
     margin: 0 auto 21px auto;
     width: 90%;
+}
+
+.table {
+    width: 93%;
+    margin: auto;
 }
