--- a/layouts/zk/single.content.html
+++ b/layouts/zk/single.content.html
@@ -1,2 +1,11 @@
-{{ partial "bloc/content/content.html" . }}
-{{ partial "bloc/content/backlinks.html" . }}
+<div class="row">
+  <div class="col-sm-12">
+    {{ partial "bloc/content/toc.html" . }}
+  </div>
+  <div class="col-sm-12">
+    {{ partial "bloc/content/content.html" . }}
+  </div>
+  <div class="col-sm-12">
+    {{ partial "bloc/content/backlinks.html" . }}
+  </div>
+</div>
