Fix problems with hugo.generator

--- a/layouts/partials/base/metas.html
+++ b/layouts/partials/base/metas.html
@@ -92,4 +92,4 @@
 <meta name="msapplication-config" content="/favicon/browserconfig.xml">
 <!-- ****** faviconit.com favicons ****** -->
 
-{{ .Hugo.Generator }}
+{{ hugo.Generator }}
