--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,9 +214,9 @@ pre code {
     line-height: calc(1.2em + (1.3 - 1.1) * ((100vw - 300px)/(1600 - 300)));
 }
 
-.highlight {
+/* .highlight {
 
-}
+} */
 
 .fa-facebook-official { color: #3b5998; }
 
